# job-scheduling-arc-index-time

./: .gitignore  README.md  analise.txt  makefile
POC/: main.py  (+2 more)
model_macharia_time_index/: Dockerfile  README.md  pyproject.toml  requirements.txt  run.sh
model_macharia_time_index/data/parameters/: brut_shifts.csv  setup_times.csv
model_macharia_time_index/data/raw/17102025/: 38-part-0000.parquet
model_macharia_time_index/data/raw/model_config/: setup.csv
model_macharia_time_index/data/trusted/15092025/: agenda_jobs.xlsx  assignment_jobs.csv  gap_input.json  gap_output.json  job_scheduling_input.json  job_scheduling_output.json  jobs_penalizados.csv  macharia.csv  macharia.parquet  maquinas_erro_cadastro.csv
model_macharia_time_index/data/trusted/17092025/: agenda_jobs.xlsx  assignment_jobs.csv  gap_input.json  gap_output.json  job_scheduling_input.json  job_scheduling_output.json  jobs_penalizados.csv
model_macharia_time_index/data/trusted/25092025/: agenda_jobs.xlsx  assignment_jobs.csv  gap_input.json  gap_output.json  job_scheduling_input.json  job_scheduling_output.json
model_macharia_time_index/data/trusted/29092025/: agenda_jobs.xlsx  assignment_jobs.csv  gap_input.json  gap_output.json  job_scheduling_input.json  job_scheduling_output.json
model_macharia_time_index/data/trusted/30092025/: agenda_jobs.xlsx  assignment_jobs.csv  gap_input.json  gap_output.json  job_scheduling_input.json  (+3 more)
model_macharia_time_index/src/main/: athena_ingest.py  dashboard.py  data_input_process.py  data_output_process.py  harumi_api.py  optimize.py  query_athena.py
(+91 files in other folders)
