[tool.poetry]
name = "pcp-afm"
version = "0.1.0"
description = ""
authors = ["marcel nicolay <marcel.nicolay@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11.9, <3.13"
pyodbc = ">=5.2.0,<6.0.0"
pandas = ">=2.2.3,<3.0.0"
matplotlib = ">=3.10.3,<4.0.0"
seaborn = ">=0.13.2,<0.14.0"
openpyxl = ">=3.1.5,<4.0.0"
scikit-learn = ">=1.6.1,<2.0.0"
folium = ">=0.19.7,<0.20.0"
statsmodels = ">=0.14.4,<0.15.0"
xgboost = ">=3.0.2,<4.0.0"
lightgbm = ">=4.6.0,<5.0.0"
catboost = ">=1.2.8,<2.0.0"
requests = ">=2.32.4,<3.0.0"
pyarrow = ">=20.0.0,<21.0.0"
streamlit = ">=1.47.0,<2.0.0"
ipdb = ">=0.13.13,<0.14.0"
joblib = ">=1.5.1,<2.0.0"
geopandas = ">=1.1.1,<2.0.0"
shapely = ">=2.1.1,<3.0.0"
fiona = ">=1.10.1,<2.0.0"
pyproj = ">=3.7.1,<4.0.0"
rtree = ">=1.4.0,<2.0.0"
unidecode = "^1.4.0"
dotenv = "^0.9.9"
pyomo = "^6.9.4"
gurobipy = "^12.0.3"
xlsxwriter = "^3.2.9"
boto3 = "^1.40.44"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^23.0"
isort = "^5.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"